# routes/api.php
@@ -210,6 +210,7 @@ Route::get('/hotels/nearby', [HotelController::class, 'getNearbyHotels']);
 Route::get('/hotels/best', [HotelController::class, 'getBestHotels']);
 Route::get('/hotels/search/keyword', [HotelController::class, 'searchHotelsByKeyword']);
 Route::post('/hotels/{hotel_id}/rooms/{room_id}/reserve', [HotelController::class, 'hotelReservation']);
+Route::get('/hotels/{hotel_id}/gallery', [HotelController::class, 'getHotelGallery']);
 
 Route::get('/hotels/banners', [HotelController::class, 'getActiveBanners']);
 Route::get('/hotels/search', [HotelController::class, 'hotelSearch']);
